# CLI_password_generator

./: Cargo.toml  LICENSE
src/: cli.rs  generator.rs  gui.rs  lib.rs  main.rs  main_gui.rs
src/tests/: generator_tests.rs
