[package]
name = "password-gen"
version = "0.1.0"
edition = "2024"
authors = ["Hubert"]
description = "Password generator in Rust using CLI"
license = "MIT"


[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
colored = "3.0.0"

[dev-dependencies]
assert_cmd = "2"

[[test]]
name = "generator_tests"
path = "tests/generator_tests.rs"
